--- a/index.css
+++ b/index.css
@@ -25,6 +25,22 @@ body {
     padding: 50px;
     border-radius: 10px;
     color: white;
+
+}
+
+.player-container {
+    text-align: center;
+    margin: 0 auto;
+    background-image: linear-gradient(135deg, grey ,  rgb(43, 43, 43));
+    box-shadow: -2px 6px 18px 3px rgba(0,0,0,0.75);
+    padding: 50px;
+    border-radius: 10px;
+    color: white;
+    
+}
+
+h1 {
+    margin-top: 0;
 }
 
 .players {
@@ -87,6 +103,15 @@ button:active {
 
 .looser {
         box-shadow: -2px 6px 18px 3px red;
+}
+
+.playerWinner {
+    background-image: linear-gradient(135deg, rgb(0, 250, 42) ,  rgb(0, 88, 44));
+}
+
+.playerLooser {
+    background-image: linear-gradient(135deg, rgb(250, 0, 42) ,  rgb(88, 0, 44));
+
 }
 
 @keyframes fadeVisibility {
